--- a/client/app/posts/posts.css
+++ b/client/app/posts/posts.css
@@ -3,10 +3,27 @@
 }
 .posts-banner-head {
   height: 10px;
-  background: url(../../assets/images/banner.png);
+  background: url(../../assets/images/banner-dark.png);
   opacity: .75;
+  background-position-y: -123px;
 }
 .posts-footer {
-  background-color:#f8f8f8;
+  background-color:#4e5d6c;
   height:100px;
+}
+#logo {
+width: 60px;
+height: 60px;
+background: red;
+-webkit-border-radius: 100%;
+position: absolute;
+top: 0px;
+left: 44%;
+z-index: 10000;
+background-color: rgb(235, 235, 235);
+color: rgb(43, 62, 80);
+font-size: 36px;
+font-weight: bold;
+border: 8px solid rgb(78, 93, 108);
+line-height: 1.2em;
 }
